<?xml version="1.0"?>
<package format="2">
  <name>unreal_vision_bridge</name>
  <version>0.0.0</version>
  <description>Unreal vision to ROS bridge</description>

  <maintainer email="wiedemeyer@cs.uni-bremen.de">Thiemo Wiedemeyer</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/code-iai/unreal_vision_bridge</url>

  <author email="wiedemeyer@cs.uni-bremen.de">Thiemo Wiedemeyer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>rostime</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
